--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,12 @@
   },
   "homepage": "https://github.com/Casres/employee_track#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "console.table": "^0.10.0",
-    "inquirer": "^9.0.2"
+    "dotenv": "^16.0.1",
+    "figlet": "^1.5.2",
+    "inquirer": "^9.0.2",
+    "mysql2": "^2.3.3",
+    "promise-mysql": "^5.2.0"
   }
 }
