--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "schema": "node db/schema.sql",
+    "seed": "node db/seed.sql",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
